[package]
name = "broth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true
opt-level = 0

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
png = "0.17.10"
thiserror = "1.0.56"
tobj = "4.0.1"
vulkanalia = {version="0.22.0", features=["libloading", "provisional", "window"]}
winit = {version = "0.29", features = ["rwh_05"]}
